load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

load("@io_bazel_rules_webtesting//web:go.bzl", "go_web_test_suite")

go_web_test_suite(
    name = "test",
    srcs = [
        "wd_test.go",
    ],
    browser_overrides = {
        "@io_bazel_rules_webtesting//browsers:chromium-native": {
            "local": True,
            "tags": ["noci"],
        },
    },
    browsers = [
        "@io_bazel_rules_webtesting//browsers:chromium-native",
    ],
    deps = [
        "@com_github_tebeka_selenium//:go_default_library",
        "@com_github_tebeka_selenium//chrome:go_default_library",
        "@com_github_tebeka_selenium//log:go_default_library",
        "@io_bazel_rules_webtesting//go/webtest:go_default_library",
    ],
)
