load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "bazel_bugs/somemain",
    visibility = ["//visibility:private"],
    deps = ["@com_github_jmhodges_gocld3//cld3:go_default_library"],
)

go_binary(
    name = "somemain",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
